Renaming + header changes
datova sada -> databaze
pocty v hlavicce

--- a/Lib/Emails/Templates/FoundDataset.Html.cshtml
+++ b/Lib/Emails/Templates/FoundDataset.Html.cshtml
@@ -5,7 +5,7 @@
     Našli jsme nové záznamy pro hlídače nových údajů <b>@Model.WDName</b>.
 </p>
 <p>
-    V době @Model.Interval @Model.TotalTxt z datové sady <b>@Model.Dataset.Registration().name</b> pro tento dotaz: <br />
+    V době @Model.Interval @Model.TotalTxt z databáze <b>@Model.Dataset.Registration().name</b> pro tento dotaz: <br />
     <b>@Model.Query</b>
 </p>
 @if (Model.AddResults > 0)
