--- a/Lib/Emails/Templates/FoundDataset.Text.cshtml
+++ b/Lib/Emails/Templates/FoundDataset.Text.cshtml
@@ -3,7 +3,7 @@
 Dobrý den.
 Našli jsme nové záznamy pro hlídače nových údajů "@Model.WDName".
 
-V době @Model.Interval @Model.TotalTxt z datové sady "@Model.Dataset.Registration().name" pro tento dotaz
+V době @Model.Interval @Model.TotalTxt z databáze "@Model.Dataset.Registration().name" pro tento dotaz
 @Model.Query
 
 @if (Model.AddResults > 0)
