--- a/Web.Statu/App_Code/Util.cshtml
+++ b/Web.Statu/App_Code/Util.cshtml
@@ -473,8 +473,8 @@ else if (dataType == typeof(HlidacStatu.Lib.Data.Insolvence.Rizeni))
 }
 else if (dataType == typeof(HlidacStatu.Lib.Data.External.DataSets.DataSet))
 {
-    dataTypeName = "záznamy v datové sadě";
-    dataTypeName2 = "záznamů v datových sadách";
+    dataTypeName = "záznamy v databázi";
+    dataTypeName2 = "záznamů v databázích";
 }
 else if (dataType == null)
 {
