--- a/Web.Statu/Views/Data/CreateAdv.cshtml
+++ b/Web.Statu/Views/Data/CreateAdv.cshtml
@@ -8,7 +8,7 @@
 @using System.Text.RegularExpressions;
 @{
 
-    ViewBag.Title = "Vytvoření nové datové sady";
+    ViewBag.Title = "Vytvoření nové databáze";
     ViewBag.SubTitle = "Pro pokročilé";
     ApiResponseStatus err = ViewBag.ApiResponseError;
 
@@ -38,7 +38,7 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li><a href="/data">Datové zdroje</a></li>
+        <li><a href="/data">Databáze</a></li>
         <li class="active">@ViewBag.Title</li>
     </ol>
 }
