--- a/Web.Statu/Views/Data/CreateSimple3.cshtml
+++ b/Web.Statu/Views/Data/CreateSimple3.cshtml
@@ -27,7 +27,7 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li><a href="/data">Datové zdroje</a></li>
+        <li><a href="/data">Databáze</a></li>
         <li class="active">@ViewBag.Title</li>
     </ol>
 }
