--- a/Web.Statu/Views/Data/Delete.cshtml
+++ b/Web.Statu/Views/Data/Delete.cshtml
@@ -24,7 +24,7 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li><a href="/data">Datové zdroje</a></li>
+        <li><a href="/data">Databáze</a></li>
         <li><a href="@Model.DatasetUrl()">@Model.Registration().name</a></li>
         <li class="active">Smazání datasetu</li>
     </ol>
