--- a/Web.Statu/Views/Data/ImportData.cshtml
+++ b/Web.Statu/Views/Data/ImportData.cshtml
@@ -30,7 +30,7 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li><a href="/data">Datové zdroje</a></li>
+        <li><a href="/data">Databáze</a></li>
         <li><a href="@ds.DatasetUrl()">@ds.Registration().name</a></li>
         <li class="active">@ViewBag.Title</li>
     </ol>
