--- a/Web.Statu/Views/Data/TechnickeInfo.cshtml
+++ b/Web.Statu/Views/Data/TechnickeInfo.cshtml
@@ -42,7 +42,7 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li><a href="/data">Datové zdroje</a></li>
+        <li><a href="/data">Databáze</a></li>
         <li><a href="@Model.DatasetUrl()">@reg.name</a></li>
         <li class="active">Technické informace</li>
         <li class="active pull-right"><a href="/data/manage" class="btn btn-primary btn-sm" style="color:whitesmoke;text-decoration:none">Snadné přidání nového datasetu</a></li>
@@ -171,7 +171,7 @@
                 <tr>
                     <td>Otestovat strukturu dat</td>
                     <td>
-                        Pokud chcete otestovat vaše data, zda mají správný formát a splňují požadavky <a href="https://json-schema.org">JSON Schematu</a> této datové sady, rádí pomůžeme.
+                        Pokud chcete otestovat vaše data, zda mají správný formát a splňují požadavky <a href="https://json-schema.org">JSON Schematu</a> této databáze, rádí pomůžeme.
 
                         <form method="post" action="/data/datasettextjson/@Model.DatasetId">
                             <div class="form-group">
