--- a/Web.Statu/Views/Data/_new.cshtml
+++ b/Web.Statu/Views/Data/_new.cshtml
@@ -2,7 +2,7 @@
 
 <div class="panel panel-warning" style="margin-top:40px;">
     <div class="panel-heading">
-        <h3 class="panel-title">Datové sady nově na Hlídači</h3>
+        <h3 class="panel-title">Databáze nově na Hlídači</h3>
 </div>
     <div class="panel-body">
         <p>
