--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
         <!-- desktop menu items only -->
         <div class="navbar__level2">
             <ul>
-                <li class=""><a href="/data">Datové sady</a></li>
+                <li class=""><a href="/data">Databáze</a></li>
                 <li class=""><a href="/reporty">Analýzy a reporty</a></li>
                 <li class=""><a href="/texty">Komentáře</a></li>
                 <li class=""><a href="https://platforma.hlidacstatu.cz">Fórum</a></li>
