--- a/Lib/Emails/Templates/FoundDataset.cshtml
+++ b/Lib/Emails/Templates/FoundDataset.cshtml
@@ -1,5 +1,5 @@
 ﻿To: @Model.To
 From: @Model.From
-Subject: Nalezené nové údaje na HlidacStatu.cz z datové sady 
+Subject: Nalezené nové údaje na HlidacStatu.cz z databáze 
 Views: Text, Html
 
