--- a/Web.Statu/Views/Data/Hledat.cshtml
+++ b/Web.Statu/Views/Data/Hledat.cshtml
@@ -29,7 +29,7 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li><a href="/data">Datové zdroje</a></li>
+        <li><a href="/data">Databáze</a></li>
         <li><a href="@Model.DataSet.DatasetUrl()">@registration.name</a></li>
         <li class="active">@ViewBag.SubTitle</li>
         <li class="active pull-right"><a href="/data/manage" class="btn btn-primary btn-sm" style="color:whitesmoke;text-decoration:none">Snadné přidání nového datasetu</a></li>
@@ -123,7 +123,7 @@
         var msg = e?.InnerException?.Message ?? "Interní chyba";
         msg = HlidacStatu.Util.ParseTools.ReplaceWithRegex(msg, "", @".*: \s* error \s* CS\d{1,8}:");
 
-        @Html.Raw($"<h2>Chyba v template - zpráva pro autora této datové sady</h2><pre>{msg}</pre>")
+        @Html.Raw($"<h2>Chyba v template - zpráva pro autora této databáze</h2><pre>{msg}</pre>")
         HlidacStatu.Util.Consts.Logger.Warning("HledatBody_CustomdataTemplate", e);
 
         if (msg != "Interní chyba")
