--- a/Web.Statu/Views/Data/NoAccess.cshtml
+++ b/Web.Statu/Views/Data/NoAccess.cshtml
@@ -14,7 +14,7 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li><a href="/data">Datové zdroje</a></li>
+        <li><a href="/data">Databáze</a></li>
         <li class="active">@ViewBag.Title</li>
         <li class="active pull-right"><a href="/data/manage" class="btn btn-primary btn-sm" style="color:whitesmoke;text-decoration:none">Snadné přidání nového datasetu</a></li>    </ol>
 }
