--- a/Web.Statu/Views/Data/Index.cshtml
+++ b/Web.Statu/Views/Data/Index.cshtml
@@ -123,6 +123,7 @@ try
                         @if (showEditBtn)
                         {
                             <a href="/data/Manage/@dsContent.DatasetId" class="btn btn-default" alt="Nastavení datasetu" title="Nastavení datasetu"><i class="far fa-cog"></i> Nastavení</a>
+                            <a href="/data/Index/@dsContent.DatasetId" class="btn btn-default" style="margin-left:10px"><i class="far fa-info-circle"></i></a>
                         }
                         else
                         {
