--- a/Web.Statu/App_Code/Util.cshtml
+++ b/Web.Statu/App_Code/Util.cshtml
@@ -451,66 +451,66 @@ smartlook('init', '344e291cbee0b3c87748a78b80faf81d6e8628b1');";
     </a>
 }
 
-@helper AddWatchDogSmall(System.Security.Principal.IPrincipal user, string query, Type dataType, string btnText = null, 
-        string preBtnText = null, string postBtnText = null, string prefillWDname = "", 
+@helper AddWatchDogSmall(System.Security.Principal.IPrincipal user, string query, Type dataType, string btnText = null,
+        string preBtnText = null, string postBtnText = null, string prefillWDname = "",
         bool showWDList = true, string datasetId = null, string btnCss = null)
 {
     @AddWatchDog(user, query, dataType, btnText, preBtnText ?? "", postBtnText ?? "", prefillWDname, showWDList, datasetId, true, btnCss ?? "btn btn-warning btn-sm")
 }
 @helper AddWatchDog(System.Security.Principal.IPrincipal user, string query, Type dataType, string btnText = null, string preBtnText = null, string postBtnText = null, string prefillWDname = "", bool showWDList = true, string datasetId = null, bool showBtnIcon = true, string btnCss = null)
 {
-string dataTypeName = "smlouvy";
-string dataTypeName2 = "smluv";
-if (dataType == typeof(HlidacStatu.Lib.Data.VZ.VerejnaZakazka))
-{
-    dataTypeName = "zakázky";
-    dataTypeName2 = "zakázek";
-}
-else if (dataType == typeof(HlidacStatu.Lib.Data.Insolvence.Rizeni))
-{
-    dataTypeName = "insolvence";
-    dataTypeName2 = "insolvencí";
-}
-else if (dataType == typeof(HlidacStatu.Lib.Data.External.DataSets.DataSet))
-{
-    dataTypeName = "záznamy v databázi";
-    dataTypeName2 = "záznamů v databázích";
-}
-else if (dataType == null)
-{
-    dataTypeName = "informace na Hlídači";
-    dataTypeName2 = "informací ve všech databázích Hlídače";
-}
-
-string datatypeApi = dataType?.Name ?? HlidacStatu.Lib.Data.WatchDog.AllDbDataType;
-if (!string.IsNullOrEmpty(datasetId))
-{
-    datatypeApi = datatypeApi + "." + datasetId;
-}
-
-var periodList = Devmasters.Core.Enums
-                  .EnumToEnumerable(typeof(HlidacStatu.Lib.Data.WatchDog.PeriodTime))
-                  .Select(m => new System.Web.Mvc.SelectListItem() { Value = m.Value, Text = "" + m.Key, Disabled = (Convert.ToInt32(m.Value) < 2) })
-                  .ToList();
-
-string uid = System.Guid.NewGuid().ToString("N");
-
-if (btnCss == null)
-{
-    btnCss = "btn btn-warning";
-}
-
-if (btnText == null)
-{
-    btnText = $"Hlídat nové {dataTypeName}";
-    if (!string.IsNullOrEmpty(query))
+    string dataTypeName = "smlouvy";
+    string dataTypeName2 = "smluv";
+    if (dataType == typeof(HlidacStatu.Lib.Data.VZ.VerejnaZakazka))
     {
-        btnText += $" pro hledání '{Devmasters.Core.TextUtil.ShortenText(query, 30,"...")}'";
+        dataTypeName = "zakázky";
+        dataTypeName2 = "zakázek";
     }
-}
-if (preBtnText == null)
-{
-    preBtnText = $@"
+    else if (dataType == typeof(HlidacStatu.Lib.Data.Insolvence.Rizeni))
+    {
+        dataTypeName = "insolvence";
+        dataTypeName2 = "insolvencí";
+    }
+    else if (dataType == typeof(HlidacStatu.Lib.Data.External.DataSets.DataSet))
+    {
+        dataTypeName = "záznamy v databázi";
+        dataTypeName2 = "záznamů v databázích";
+    }
+    else if (dataType == null)
+    {
+        dataTypeName = "informace na Hlídači";
+        dataTypeName2 = "informací ve všech databázích Hlídače";
+    }
+
+    string datatypeApi = dataType?.Name ?? HlidacStatu.Lib.Data.WatchDog.AllDbDataType;
+    if (!string.IsNullOrEmpty(datasetId))
+    {
+        datatypeApi = datatypeApi + "." + datasetId;
+    }
+
+    var periodList = Devmasters.Core.Enums
+                      .EnumToEnumerable(typeof(HlidacStatu.Lib.Data.WatchDog.PeriodTime))
+                      .Select(m => new System.Web.Mvc.SelectListItem() { Value = m.Value, Text = "" + m.Key, Disabled = (Convert.ToInt32(m.Value) < 2) })
+                      .ToList();
+
+    string uid = System.Guid.NewGuid().ToString("N");
+
+    if (btnCss == null)
+    {
+        btnCss = "btn btn-warning";
+    }
+
+    if (btnText == null)
+    {
+        btnText = $"Hlídat nové {dataTypeName}";
+        if (!string.IsNullOrEmpty(query))
+        {
+            btnText += $" pro hledání '{Devmasters.Core.TextUtil.ShortenText(query, 30, "...")}'";
+        }
+    }
+    if (preBtnText == null)
+    {
+        preBtnText = $@"
 <div class=""section-title"">
 Hlídání nových {dataTypeName2}
 </div>
@@ -525,15 +525,15 @@ Máme pro vás denné sledovat <b>nové {dataTypeName} odpovídající tomuto do
 <div>
 ";
 
-    //"<div class=\"bs-callout bs-callout-noborder bs-callout-primary\"><div>Máme pro vás sledovat <b>nové " + dataTypeName + "</b> odpovídající tomuto dotazu a <b>každý den vás na ně upozornit</b> emailem ?";
-}
-if (postBtnText == null)
-{
-    postBtnText = "</div>";
-}
-if (user?.Identity?.IsAuthenticated == true)
-{
-    var availableWatchdogs = HlidacStatu.Lib.Data.Invoices.GetAvailableWatchdogs(user.Identity.GetUserId());
+        //"<div class=\"bs-callout bs-callout-noborder bs-callout-primary\"><div>Máme pro vás sledovat <b>nové " + dataTypeName + "</b> odpovídající tomuto dotazu a <b>každý den vás na ně upozornit</b> emailem ?";
+    }
+    if (postBtnText == null)
+    {
+        postBtnText = "</div>";
+    }
+    if (user?.Identity?.IsAuthenticated == true)
+    {
+        var availableWatchdogs = HlidacStatu.Lib.Data.Invoices.GetAvailableWatchdogs(user.Identity.GetUserId());
 
 
         <text>
@@ -1081,44 +1081,44 @@ if (user?.Identity?.IsAuthenticated == true)
 
 @helper HorizontalTabs(IEnumerable<string> tabnames, IEnumerable<string> contents, string containerCss = null)
 {
-containerCss = containerCss ?? "col-xs-12";
-//tabColCss = tabColCss ?? "col-lg-2 col-md-2 col-sm-2 col-xs-3";
-//contentColCss = contentColCss ?? "col-lg-10 col-md-10 col-sm-10 col-xs-9";
-bool first = true;
-var id = Guid.NewGuid().ToString("N") + "_";
-int count = 0;
+    containerCss = containerCss ?? "col-xs-12";
+    //tabColCss = tabColCss ?? "col-lg-2 col-md-2 col-sm-2 col-xs-3";
+    //contentColCss = contentColCss ?? "col-lg-10 col-md-10 col-sm-10 col-xs-9";
+    bool first = true;
+    var id = Guid.NewGuid().ToString("N") + "_";
+    int count = 0;
 
-<div class="@containerCss">
-    <ul class="nav nav-tabs" role="tablist">
-        @foreach (var tabn in tabnames)
-        {
-            count++;
+    <div class="@containerCss">
+        <ul class="nav nav-tabs" role="tablist">
+            @foreach (var tabn in tabnames)
+            {
+                count++;
 
-            <li role="presentation" @Util.IfExists(first, " class='active' ")>
-                <a href="#@(id+count.ToString())" aria-controls="@(id+count.ToString())" role="tab" data-toggle="tab">@Html.Raw(tabn)</a>
-            </li>
-            first = false;
-        }
-    </ul>
+                <li role="presentation" @Util.IfExists(first, " class='active' ")>
+                    <a href="#@(id+count.ToString())" aria-controls="@(id+count.ToString())" role="tab" data-toggle="tab">@Html.Raw(tabn)</a>
+                </li>
+                first = false;
+            }
+        </ul>
 
-    <div class="tab-content">
-        @{
-            first = true;
-            count = 0;
-        }
-        @foreach (var s in contents)
-        {
-            count++;
-        <div role="tabpanel" class="tab-pane @Util.IfExists(first, "active")" id="@(id+count.ToString())">
-            @Html.Raw(s)
+        <div class="tab-content">
+            @{
+                first = true;
+                count = 0;
+            }
+            @foreach (var s in contents)
+            {
+                count++;
+                <div role="tabpanel" class="tab-pane @Util.IfExists(first, "active")" id="@(id+count.ToString())">
+                    @Html.Raw(s)
 
+                </div>
+
+                first = false;
+            }
         </div>
 
-            first = false;
-        }
     </div>
-
-</div>
 }
 
 
@@ -1135,9 +1135,9 @@ int count = 0;
                 {
                     if (s != null)
                     {
-                    <a href="#" class="list-group-item @(first ? "active" : "")">
-                        @Html.Raw(s)
-                    </a>
+                        <a href="#" class="list-group-item @(first ? "active" : "")">
+                            @Html.Raw(s)
+                        </a>
 
                         first = false;
                     }
@@ -1163,6 +1163,21 @@ int count = 0;
     </div>
 }
 
+@helper LowBox(string content)
+{
+    @LowBox(120, content)
+}
+
+@helper LowBox(int width, string content)
+{ 
+<div class="low-box" style="max-height:@(width)px">
+    <div class="low-box-line" style="top:@(width-55)px"><a href="#" class="more"></a></div>
+    <div class="low-box-content">
+        @Html.Raw(content)
+    </div>
+</div>
+
+}
 
 @helper XContent(string content, bool raw = false)
 {
