--- a/Web.Statu/Views/ApiV1/UX.cshtml
+++ b/Web.Statu/Views/ApiV1/UX.cshtml
@@ -197,19 +197,34 @@
         <div class="row">
             <div class="col-sm-3">
                 <div class="low-box">
-                    <div class="low-box-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. Pellentesque sapien. Nullam sapien sem, ornare ac, nonummy non, lobortis a enim. Quisque tincidunt scelerisque libero. Curabitur sagittis hendrerit ante. Duis ante orci, molestie vitae vehicula venenatis, tincidunt ac pede. Praesent dapibus. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Pellentesque pretium lectus id turpis. Integer tempor. Fusce dui leo, imperdiet in, aliquam sit amet, feugiat eu, orci. Maecenas lorem. Nunc dapibus tortor vel mi dapibus sollicitudin. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus.</div>
                     <div class="low-box-line"><a href="#" class="more"></a></div>
+                    <div class="low-box-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. Pellentesque sapien. Nullam sapien sem, ornare ac, nonummy non, lobortis a enim. Quisque tincidunt scelerisque libero. Curabitur sagittis hendrerit ante. Duis ante orci, molestie vitae vehicula venenatis, tincidunt ac pede. Praesent dapibus. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Pellentesque pretium lectus id turpis. Integer tempor. Fusce dui leo, imperdiet in, aliquam sit amet, feugiat eu, orci. Maecenas lorem. Nunc dapibus tortor vel mi dapibus sollicitudin. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus.</div>
                 </div>
             </div>
-            <div class="col-sm-3">
-                <div class="low-box">
-                    <div class="low-box-content">
-                        Lorem <b>ipsum (zkráceně lipsum)</b> je označení pro standardní pseudolatinský text užívaný v grafickém designu a navrhování jako demonstrativní výplňový text při vytváření pracovních ukázek grafických návrhů (např. internetových stránek, rozvržení časopisů či všech druhů reklamních materiálů). Lipsum tak pracovně znázorňuje text v ukázkových maketách (tzv. mock-up) předtím, než bude do hotového návrhu vložen smysluplný obsah.
-                        <br />
-                        Pokud by se pro stejný účel použil smysluplný text, bylo by těžké hodnotit pouze vzhled, aniž by se pozorovatel nechal svést ke čtení obsahu. Pokud by byl naopak použit nesmyslný, ale pravidelný text (např. opakování „asdf asdf asdf…“), oko by při posuzování vzhledu bylo vyrušováno pravidelnou strukturou textu, která se od běžného textu liší. Text lorem ipsum na první pohled připomíná běžný text, slova jsou různě dlouhá, frekvence písmen je podobná běžné řeči, interpunkce vypadá přirozeně atd.
-                    </div>
-                    <div class="low-box-line"><a href="#" class="more"></a></div>
-                </div>
+            <div class="col-sm-9">
+                <b>Razor funkce</b>
+<pre>
+@@Util.LowBox(120,"Lorem ipsum dolor sit  ....")
+</pre>
+                <b>HTML s default vyskou 120px</b>
+<pre>
+&#x3C;div class=&#x22;low-box&#x22;&#x3E;
+    &#x3C;div class=&#x22;low-box-line&#x22;&#x3E;&#x3C;a href=&#x22;#&#x22; class=&#x22;more&#x22;&#x3E;&#x3C;/a&#x3E;&#x3C;/div&#x3E;
+    &#x3C;div class=&#x22;low-box-content&#x22;&#x3E;Lorem ipsum dolor sit amet.......&#x3C;/div&#x3E;
+&#x3C;/div&#x3E;
+</pre>
+                <b>HTML s jinou vyskou</b>
+                <div><code>max-height:<b>80px</b></code> je celkova vyska zavreneho boxu</div>
+                <div><code>top:<b>20px</b></code> u <code>div 'low-box-line'</code> je celkova vyska zavreneho boxu-55 pixelu.</div>
+<pre>
+&#x3C;div class=&#x22;low-box&#x22; style=&#x22;max-height:<b>80px</b>&#x22;&#x3E;
+    &#x3C;div class=&#x22;low-box-line&#x22; style=&#x22;top:<b>25px</b>&#x22;&#x3E;&#x3C;a href=&#x22;#&#x22; class=&#x22;more&#x22;&#x3E;&#x3C;/a&#x3E;&#x3C;/div&#x3E;
+    &#x3C;div class=&#x22;low-box-content&#x22;&#x3E;
+        Lorem ipsum....
+&#x3C;/div&#x3E;
+    &#x3C;/div&#x3E;
+&#x3C;/div&#x3E;
+</pre>
             </div>
         </div>
 
